--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Landing page for travelling agency",
   "main": "index.js",
   "scripts": {
+    "start": "webpack --mode production",
     "dev": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
