--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Landing page for travelling agency",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --mode production",
+    "start": "node server.js",
+    "heroku-postbuild": "webpack -p",
     "dev": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -37,5 +38,8 @@
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
+  },
+  "dependencies": {
+    "express": "^4.16.4"
   }
 }
